src/test/deca/syntax/invalid/test9_float.deca
// Description:
//    Programme testant un flottant invalide.
//	  Etape(s) : A et B
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//
// Resultats:
//    test_lex : pas d'erreur
//    test_synt : erreur ligne 16 : un flottant hexadecimal doit contenir 
//		un 'p' ou 'P' : no viable alternative at input 'x12'
//
// Historique:
//    cree le 10/01/2021

{
	print(0x12.0);
}
